deployment was segfaulting?

--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,22 @@
-# fly.toml app configuration file generated for su on 2023-08-15T00:41:16+01:00
+# fly.toml app configuration file generated for su on 2024-02-03T18:50:56Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "su"
-primary_region = "mad"
+app = 'su'
+primary_region = 'mad'
 
 [build]
 
 [http_service]
   internal_port = 8080
   force_https = true
+  auto_stop_machines = false
+  auto_start_machines = false
   min_machines_running = 1
-  processes = ["app"]
+  processes = ['app']
+
+[[vm]]
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
